gradient visibility issue fix

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -20,18 +20,21 @@
 }
 
 .title {
-    font-size: 72px;
-    font-weight: 900;
-    margin-bottom: 33px;
-    font-family: var(--font-roboto);
-    background: linear-gradient(
-        90deg, 
-        rgba(255, 255, 255, 1)70%, 
-        rgba(255, 255, 255, 0)120%
-        );
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+  font-size: 72px;
+  font-weight: 900;
+  margin-bottom: 33px;
+  font-family: var(--font-roboto);
+  color: white;
 }
+
+@supports (-webkit-background-clip: text) and (-webkit-text-fill-color: transparent) {
+  .title {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0) 120%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
 
 .description {
     font-size: 30px;
